#
# This file is part of onizd, copyright ©2020 Solra Bizna.
#
# onizd is free software: you can redistribute it and/or modify it under the
# terms of the GNU General Public License as published by the Free Software
# Foundation, either version 3 of the License, or (at your option) any later
# version.
#
# onizd is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
# details.
#
# You should have received a copy of the GNU General Public License along with
# onizd. If not, see <https://www.gnu.org/licenses/>.
#

[package]
name = "onizd"
version = "0.8.2"
authors = ["Solra Bizna <solra@bizna.name>"]
edition = "2018"

[features]
default = []
auth = ["rand"]
gui = ["gtk", "gio", "glib"]

[dependencies]
anyhow = "1.0"
ctrlc = "3.1"
getopts = "0.2.21"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "0.2", features = ["rt-core", "io-std", "io-util", "tcp", "macros", "dns", "fs", "time", "sync"]}
bytes = "*"
futures = "*"
tokio-util = {version = "0.3", features = ["codec"]}
lsx = {version = "1.1", default-features = false, features = ["sha256"]}
rand = {version = "0.7", optional = true}
base64 = "0.12"
lazy_static = "1.4"
flate2 = "1.0"

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]
optional = true

[dependencies.gio]
version = "*"
features = ["v2_44"]
optional = true

[dependencies.glib]
version = "*"
optional = true
